2007-02-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* databuf.c: Corrected bug in databuf_alloc: Sybase reports the
	wrong maxlength for numeric type - verified with Sybase 12.5 -
	thanks to patch provided by Phil Porter

2007-02-26  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for CS_DATE_TYPE

2007-02-02  Sébastien Sablé  <sable@users.sourceforge.net>

	* Releasing version 0.38pre2

	* Sybase.py: Add structured error information to
	Sybase.DatabaseError thanks to patch provided by Gregory Bond
	(close tracker 1631902)

	* Resurrected Sybase.Bulkcopy functionality thanks to patch
	provided by Gregory Bond (close tracker 1632916)

2007-01-29  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected AttributeError when locking is off (close tracker
	1637942 reported by Jim Nusbaum)

2007-01-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected incorrect type mx.DateTime.DateTime
	returned by Sybase.Date() in "mx" datetime mode. This type is not
	supported by DataBuf.

2007-01-11  Sébastien Sablé  <sable@users.sourceforge.net>

	* blk.c: Corrected crash on a BLK object when debug is enabled
	(close tracker 1630941 reported by Gregory Bond)

2007-01-02  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: rowcount is now propagated to Cursor (corrects
	tracker 1621003)

	* databuf.c, setup.py, sybasect.h, sybasect.c,
	tests/sybase_dbapi20.py: Added support for python datetime type in
	DataBuf and as parameter of Cursor.execute()

2006-12-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected Date, Time and Timestamp functions when
	using mx.DateTime or native python datetime types

	* Sybase.py: Corrected DATETIME as cursor.description still
	returns native Sybase datetime types

2006-12-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* blk.c: Corrected blk_describe always returns (status, None)
	thanks to patch by Phil Porter
